bt04 validation cho form va thuc hien bostrap